--- a/css/styles.css
+++ b/css/styles.css
@@ -3,29 +3,71 @@
     --secondary-font: 'Raleway', sans-serif;
     --main-color: #2196F3;
     --secondary-color:#212121;
+    --navigation-color: #757575;
+    --button-background-color:#F5F4FA;
+    --focus-color:#FFFFFF;
+    --hero-item-background-color:#2F303A;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+  * {
+    margin: 0;
+  }
+  ul {
 
+    list-style-type: none;
+    
+    }
+  a {
+    text-decoration: none;
+  }
+  button {
+    cursor: pointer;
+  }
 body {
     font-family:var(--main-font);
+    font-family: 'Roboto';
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
 }
-
-.list {
-    list-style: none;
-}
-
-.link {
+a {
     text-decoration: none;
 }
+.slogan {
+    background-color:var(--hero-item-background-color);
+    height: 600px;
+}
+.section {
+    padding: 94px 0;
+  }
+  .container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
 /* ---------- HEADER --------------*/
+header {
+    border-bottom:1px solid #ECECEC;
+    background-color:var(--focus-color);
+    height: 80px;
+    margin-bottom: 0px;
+}
+.navigation-header {
+    margin-right: auto;
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+}
 .logo,
 .logo-color {
     font-family: var(--secondary-font);
-    font-style: normal;
-    font-weight: 700;
     font-size: 26px;
     line-height: 1.192;
-    letter-spacing: 0.03em;
-    color: #2196F3;
+    color:var(--main-color);
 }
 
 
@@ -38,20 +80,38 @@ body {
 .button {
     cursor: pointer;
 }
-
+.navigation {
+    display:inline;
+    margin-bottom: 0px;
+    align-items:center;
+}
+.navigation-all {
+    display:flex;
+}
+.navigation-list-list {
+    display:inline-block;
+    justify-content:space-between;
+    align-items:center;
+}
+.navigation-link{
+    margin-top:32px;
+}
+.nav-link {
+    display:inline;
+    margin-inline: 23px;
+}
 .navigation-list-link,
 .navigation-list-mail,
 .navigation-list-tel
  {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.143;
     letter-spacing: 0.02em;
     color: var(--secondary-color);
 }
 .navigation-list-mail,
 .navigation-list-tel {
-    color: #757575;
+    color:var(--navigation-color)
 }
 
 .navigation-list-link:hover,
@@ -67,149 +127,210 @@ body {
 
 
 /* ---------- MAIN --------------*/
+.about-img-list {
+    display: flex;
+    justify-content: space-between;
+}
+
 .team-job {
-        font-weight: 400;
-        font-size: 16px;
         line-height: 1.187;
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: #757575;
+        color:var(--navigation-color)
 }
 
 .team-name {
         font-weight: 500;
-        font-size: 16px;
         line-height: 1.187;
-        text-align: center;
-        letter-spacing: 0.03em;
         color:var(--secondary-color);
 }
+.team-img-list-item {
+         background-color:var(--focus-color);
+         display:inline-block;
+         justify-content: space-between;
+         height:368px;
+         width: 270px;
+         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+        }
 
+.team-img-list {
+    display:flex;
+    justify-content: space-between;
+}
 .secondary-undertitle {
-font-weight: 700;
 font-size: 36px;
 line-height: 1.167;
-text-align: center;
-letter-spacing: 0.03em;
 color:var(--secondary-color);
+width:160;
+margin-bottom: 50px;
+margin-left:0px;
+display:block;
+text-align: center;
 }
 
 .hero-text {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.714;
-        letter-spacing: 0.03em;
-        color: #757575;
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+width: 270px;
+height: 75px;
+        color:var(--navigation-color)
 }
 
 .undertitle {
-        font-weight: 700;
-        font-size: 14px;
         line-height: 1.143;
-        letter-spacing: 0.03em;
         text-transform: uppercase;
         color: var(--secondary-color);
+        margin-bottom: 10px;
 }
 
 .hero-item-text {
         font-weight: 900;
         font-size: 44px;
-        line-height: 1.363;
-        text-align: center;
+        line-height: 60px;
         letter-spacing: 0.06em;
         text-transform: uppercase;
-        color: #FFFFFF;
+        color:var(--focus-color);
+        text-align: center;
+        display:flex;
+        width: 696px;
+        height: 120px;
+        Margin: 0 auto;
 }
-
+.hero-description-list {
+    display:flex;
+    justify-content: space-between;
+}
+.hero-description-text {
+margin-right: 30px;
+}
 .hero-item {
-    background-color:#2F303A;
+    background-color:var(--hero-item-background-color)
 }
-.hero-modal-btn {
-        background: #2196F3;
+.hero-model-btn {
+    
+font-family: 'Roboto';
+font-size: 16px;
+line-height: 30px;
+        background-color: var(--button-background-color);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
-}
-.hero-modal-btn {
-        font-weight: 700;
-        font-size: 16px;
         line-height: 1.875;  
-        display: flex;
-        align-items: center;
-        text-align: center;
         letter-spacing: 0.06em;
-        color: #FFFFFF;
+        color:var(--secondary-color);
 }
+        .hero-model-btn:hover,
+        .hero-model-btn:focus {
+            color:var(--focus-color);
+            background-color: var(--main-color);
+        } 
+ .slogan-button {
+    
+            font-family: 'Roboto';
+            font-size: 16px;
+            line-height: 30px;
+                    background-color: var(--main-color);
+                    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+                    border-radius: 4px;
+                    line-height: 30px; 
+                    letter-spacing: 0.06em;
+                    font-size: 16px;
+                    color:var(--focus-color);
+                    padding: 10px 41px 10px 42px;
+                    display:flex;
+                    align-items: center;
+                    text-align: center;
 
-.border {
-    border: 1px solid #ECECEC;
-    position: absolute;
-        width: 1600px;
-        height: 0px;
-        left: 3px;
-        top: 85px;
-}
-.nav-modal-btn {
-font-weight: 500;
+                    }
+.nav-button-card {
+    
+font-family: 'Roboto';
 font-size: 16px;
+font-weight: 500;
 line-height: 1.625;
-text-align: center;
-letter-spacing: 0.03em;
 color: var(--secondary-color);
-background-color:#F5F4FA;
+background-color: var(--button-background-color);
 border: 0;
+width: 121px;
+height: 38px;
+margin-right: 8px;
 }
-.nav-modal-btn:hover,
-.nav-modal-btn:focus {
-    color:#FFFFFF;
+.bg-color {
+    background-color: var(--button-background-color);
+    height: 648px;
+}
+.nav-button-card:hover,
+.nav-button-card:focus {
+    color:var(--focus-color);
     background-color: var(--main-color);
 }
-
+.buttons-nav {
+    display:flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.nav-link {
+    
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.625;
+    color: var(--focus-color);
+    border: 0;
+    }
+    .nav-link:hover,
+    .nav-link:focus {
+        color:var(--main-color);
+    }
+    
 /* ---------- END-MAIN --------------*/
 
 /* ---------- PORTFOLIO --------------*/
+.portfolio-list {
+    display:inline-block;
+    justify-content: space-between;
+    width: 370px;
+    height: 404px;
+    border: 1px solid #EEEEEE;
+    margin-block: 30px;
+}
 .portfolio-item {
-        font-weight: 700;
         font-size: 18px;
         line-height: 2; 
         letter-spacing: 0.06em;
         color: var(--secondary-color);
+        margin:20px 24px 4px 24px;
 }
 .portfolio-class-description {
-        font-weight: 400;
         font-size: 16px;
         line-height: 1.875;
-        letter-spacing: 0.03em;
-        color: #757575;
+        color:var(--navigation-color);
+        display:block;
+        margin: 0px 24px 20px 24px;
 }
 /* ---------- END-PORTFOLIO --------------*/
 
 /* ---------- FOOTER --------------*/
 .footer {
-    background: #2F303A;
+    background:var(--hero-item-background-color);
+    height:252px;
 }
 .footer-mail,
 .footer-tel {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.714;
-    letter-spacing: 0.03em;
     text-decoration: none;
-    font-style: normal;
     color: rgba(255, 255, 255, 0.6);
-}
-.footer-mail {
-    text-decoration-line: underline;
+
 }
 .footer-address-item {
 font-family: 'Roboto';
+color:var(--focus-color);
 font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.714;
-letter-spacing: 0.03em;
-color: #FFFFFF;
 }
 .footer-logo-color {
     color:rgba(255, 255, 255, 1);
+}
+.adress-list {
+    display:flex;
 }
 /* ---------- END-FOOTER --------------*/
