--- a/css/styles.css
+++ b/css/styles.css
@@ -1,107 +1,101 @@
 :root {
-    --main-font: 'Roboto', sans-serif;
-    --secondary-font: 'Raleway', sans-serif;
-    --main-color: #2196F3;
-    --secondary-color:#212121;
-    --navigation-color: #757575;
-    --button-background-color:#F5F4FA;
-    --focus-color:#FFFFFF;
-    --hero-item-background-color:#2F303A;
+  --main-font: 'Roboto', sans-serif;
+  --secondary-font: 'Raleway', sans-serif;
+  --main-color: #2196f3;
+  --secondary-color: #212121;
+  --navigation-color: #757575;
+  --button-background-color: #f5f4fa;
+  --focus-color: #ffffff;
+  --hero-item-background-color: #2f303a;
 }
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
-  * {
-    margin: 0;
-    padding: 0;
-  }
-  ul {
-
-    list-style-type: none;
-    
-    }
-  a {
-    text-decoration: none;
-  }
-  button {
-    cursor: pointer;
-  }
-body {
-    font-family:var(--main-font);
-    font-family: 'Roboto';
-    font-size: 14px;
-    line-height: 1.714;
-    letter-spacing: 0.03em;
+* {
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style-type: none;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+button {
+  cursor: pointer;
+}
+body {
+  font-family: var(--main-font);
+  font-family: 'Roboto';
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+}
+a {
+  text-decoration: none;
 }
 
 .section {
-    padding: 94px 0;
-  }
-  .container {
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-  }
+  padding: 94px 0;
+}
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
 /* ---------- HEADER --------------*/
 .header {
-    border-bottom:1px solid #ECECEC;
-    background-color:var(--focus-color);
+  border-bottom: 1px solid #ececec;
+  background-color: var(--focus-color);
 }
 .menu {
-    display:flex;
-    column-gap: 46px;
-
+  display: flex;
+  column-gap: 46px;
 }
 .contact {
-    display:flex;
-    column-gap: 50px;
+  display: flex;
+  column-gap: 50px;
 }
-  .rodzic {
-    display:flex;
-    column-gap: 93px;
-  }
-  .dodatkowa-klasa {
-    display:flex;
-    justify-content:space-between;
-    padding: 25px 0px;
-    height: 80px;
-  }
-  
+.rodzic {
+  display: flex;
+  column-gap: 93px;
+}
+.dodatkowa-klasa {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0px;
+}
+
 .logo,
 .logo-color {
-    font-family: var(--secondary-font);
-    font-size: 26px;
-    line-height: 1.192;
-    color:var(--main-color);
+  font-family: var(--secondary-font);
+  font-size: 26px;
+  line-height: 1.192;
+  color: var(--main-color);
 }
-
 
 .logo {
-    color:rgba(33, 150, 243, 1);
+  color: rgba(33, 150, 243, 1);
 }
 .logo-color {
-    color:rgba(0, 0, 0, 1);
+  color: rgba(0, 0, 0, 1);
 }
 .button {
-    cursor: pointer;
+  cursor: pointer;
 }
 .navigation-list-link,
 .navigation-list-mail,
-.navigation-list-tel
- {
-    font-weight: 500;
-    line-height: 1.143;
-    letter-spacing: 0.02em;
-    color: var(--secondary-color);
+.navigation-list-tel {
+  font-weight: 500;
+  line-height: 1.143;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color);
 }
 .navigation-list-mail,
 .navigation-list-tel {
-    color:var(--navigation-color)
+  color: var(--navigation-color);
 }
 
 .navigation-list-link:hover,
@@ -109,233 +103,226 @@ a {
 .navigation-list-mail:hover,
 .navigation-list-mail:focus,
 .navigation-list-tel:hover,
-.navigation-list-tel:focus
- {
-    color: var(--main-color);
- }
+.navigation-list-tel:focus {
+  color: var(--main-color);
+}
 /* -----------END HEADER --------- */
-
 
 /* ---------- MAIN --------------*/
 .about-img-list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .team-job {
-        line-height: 1.187;
-        color:var(--navigation-color);
-        text-align:center;
+  line-height: 1.187;
+  color: var(--navigation-color);
+  text-align: center;
 }
 
 .team-name {
-        font-weight: 500;
-        line-height: 1.187;
-        color:var(--secondary-color);
-        text-align: center;
-        margin: 15px;
+  font-weight: 500;
+  line-height: 1.187;
+  color: var(--secondary-color);
+  text-align: center;
+  margin: 15px;
 }
 .team-img-list-item {
-         background-color:var(--focus-color);
-         display:inline-block;
-         justify-content: space-between;
-         height:368px;
-         width: 270px;
-         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-        }
+  background-color: var(--focus-color);
+  display: inline-block;
+  justify-content: space-between;
+  height: 368px;
+  width: 270px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 
 .team-img-list {
-    display:flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .secondary-undertitle {
-font-size: 36px;
-line-height: 1.167;
-color:var(--secondary-color);
-width:160;
-margin-bottom: 50px;
-margin-left:0px;
-display:block;
-text-align: center;
+  font-size: 36px;
+  line-height: 1.167;
+  color: var(--secondary-color);
+  width: 160;
+  margin-bottom: 50px;
+  margin-left: 0px;
+  display: block;
+  text-align: center;
 }
 
 .hero-text {
-    font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-width: 270px;
-height: 75px;
-        color:var(--navigation-color)
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  width: 270px;
+  height: 75px;
+  color: var(--navigation-color);
 }
 
 .undertitle {
-        line-height: 1.143;
-        text-transform: uppercase;
-        color: var(--secondary-color);
-        margin-bottom: 10px;
+  line-height: 1.143;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+  margin-bottom: 10px;
 }
 
 .hero-item-text {
-        font-weight: 900;
-        font-size: 44px;
-        line-height: 60px;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-        color:var(--focus-color);
-        text-align: center;
-        display:flex;
-        width: 696px;
-        height: 120px;
-        Margin: 0 auto;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--focus-color);
+  text-align: center;
+  display: flex;
+  width: 696px;
+  height: 120px;
+  margin: 0 auto;
 }
 .hero-description-list {
-    display:flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .hero-description-text {
-margin-right: 30px;
+  margin-right: 30px;
 }
 .hero-item {
-    background-color:var(--hero-item-background-color)
+  background-color: var(--hero-item-background-color);
 }
 .hero-model-btn {
-    
-font-family: 'Roboto';
-font-size: 16px;
-line-height: 30px;
-        background-color: var(--button-background-color);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-        line-height: 1.875;  
-        letter-spacing: 0.06em;
-        color:var(--secondary-color);
+  font-family: 'Roboto';
+  font-size: 16px;
+  line-height: 30px;
+  background-color: var(--button-background-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: var(--secondary-color);
 }
-        .hero-model-btn:hover,
-        .hero-model-btn:focus {
-            color:var(--focus-color);
-            background-color: var(--main-color);
-        } 
+.hero-model-btn:hover,
+.hero-model-btn:focus {
+  color: var(--focus-color);
+  background-color: var(--main-color);
+}
 .slogan {
-            background-color:var(--hero-item-background-color);
-            height: 600px;
-            display:flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
- .slogan-button {
-    
-            font-family: 'Roboto';
-            font-size: 16px;
-            line-height: 30px;
-                    background-color: var(--main-color);
-                    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-                    border-radius: 4px;
-                    line-height: 30px; 
-                    letter-spacing: 0.06em;
-                    font-size: 16px;
-                    color:var(--focus-color);
-                    width: 200px;
-                    height: 50px;
-                    margin-top: 30px;
-                    }
+  background-color: var(--hero-item-background-color);
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.slogan-button {
+  font-family: 'Roboto';
+  font-size: 16px;
+  line-height: 30px;
+  background-color: var(--main-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  font-size: 16px;
+  color: var(--focus-color);
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
+}
 .nav-button-card {
-    
-font-family: 'Roboto';
-font-size: 16px;
-font-weight: 500;
-line-height: 1.625;
-color: var(--secondary-color);
-background-color: var(--button-background-color);
-border: 0;
-width: 121px;
-height: 38px;
-margin-right: 8px;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+  color: var(--secondary-color);
+  background-color: var(--button-background-color);
+  border: 0;
+  width: 121px;
+  height: 38px;
+  margin-right: 8px;
 }
 .bg-color {
-    background-color: var(--button-background-color);
-    height: 648px;
+  background-color: var(--button-background-color);
+  height: 648px;
 }
 .nav-button-card:hover,
 .nav-button-card:focus {
-    color:var(--focus-color);
-    background-color: var(--main-color);
+  color: var(--focus-color);
+  background-color: var(--main-color);
 }
 .buttons-nav {
-    display:flex;
-    justify-content: center;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 .nav-link {
-    
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.625;
-    color: var(--focus-color);
-    border: 0;
-    }
-    .nav-link:hover,
-    .nav-link:focus {
-        color:var(--main-color);
-    }
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+  color: var(--focus-color);
+  border: 0;
+}
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--main-color);
+}
 /* ---------- END-MAIN --------------*/
 
 /* ---------- PORTFOLIO --------------*/
 .portfolio-ul-list {
-    display:flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .portfolio-list {
-    display:inline-block;
-    justify-content: space-between;
-    width: 370px;
-    height: 404px;
-    border: 1px solid #EEEEEE;
-    margin:0px 25px 30px 0px;
-    padding: 0px;
+  display: inline-block;
+  justify-content: space-between;
+  width: 370px;
+  height: 404px;
+  border: 1px solid #eeeeee;
+  margin: 0px 25px 30px 0px;
+  padding: 0px;
 }
 .portfolio-item {
-        font-size: 18px;
-        line-height: 2; 
-        letter-spacing: 0.06em;
-        color: var(--secondary-color);
-        margin:20px 24px 4px 24px;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--secondary-color);
+  margin: 20px 24px 4px 24px;
 }
 .portfolio-class-description {
-        font-size: 16px;
-        line-height: 1.875;
-        color:var(--navigation-color);
-        display:block;
-        margin: 0px 24px 20px 24px;
+  font-size: 16px;
+  line-height: 1.875;
+  color: var(--navigation-color);
+  display: block;
+  margin: 0px 24px 20px 24px;
 }
 /* ---------- END-PORTFOLIO --------------*/
 
 /* ---------- FOOTER --------------*/
 .footer {
-    background:var(--hero-item-background-color);
-    height:252px;
+  background: var(--hero-item-background-color);
+  height: 252px;
 }
 .footer-mail,
 .footer-tel {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.6);
-
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
 }
 .footer-address-item {
-font-family: 'Roboto';
-color:var(--focus-color);
-font-style: normal;
+  font-family: 'Roboto';
+  color: var(--focus-color);
+  font-style: normal;
 }
 .footer-logo-color {
-    color:rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 1);
 }
 .adress-list {
-    display:flex;
+  display: flex;
 }
 /* ---------- END-FOOTER --------------*/
